--- a/src/front/styles/compra.css
+++ b/src/front/styles/compra.css
@@ -3,7 +3,7 @@
     width: 200px;
 }
 
-/* PANTALLA CELULAR */
+/* PANTALLA CELULAR CARRO DE COMPRA LLENO */
 
 @media only screen and (min-width: 520px) {
     .tituloCarro {
@@ -59,7 +59,7 @@
 
 }
 
-/* PANTALLA TABLET */
+/* PANTALLA TABLET  CARRO DE COMPRA LLENO */
 
 @media only screen and (min-width: 760px) {
     .tituloCarro {
@@ -122,7 +122,7 @@
 
 }
 
-/* PANTALLA LAPTOP */
+/* PANTALLA LAPTOP CARRO DE COMPRA LLENO */
 
 @media only screen and (min-width: 990px) {
     .tituloCarro {
@@ -138,8 +138,8 @@
     }
 
     .imgProducto {
-        width: 170px;
-        height: 170px;
+        width: 160px;
+        height: 160px;
         margin: auto;
         margin-left: 10px;
 
@@ -186,7 +186,7 @@
 
 }
 
-/* PANTALLA GRANDE */
+/* PANTALLA GRANDE CARRO DE COMPRA LLENO */
 @media only screen and (min-width: 1200px) {
     .tituloCarro {
         padding: 80px 0px 40px;
@@ -248,4 +248,35 @@
     }
 
 
+}
+
+/* separación */
+
+/* PANTALLA CELULAR CARRO VACIO */
+@media only screen and (min-width: 520px) {
+    .cajaProductoVacio {
+        margin-top: 30px;
+        width: 50%;
+        border-radius: 25px;
+    }
+
+    .botonPagar {
+        width: 50%;
+        margin-bottom: 50px;
+    }
+
+    .tituloCarroVacio {
+
+        text-align: center;
+        margin: auto;
+        margin-bottom: 50px;
+    }
+
+    .parrafoCarro {
+        margin: auto;
+    }
+
+    .fondoCarroVacio {
+        height: 100%;
+    }
 }
