proceso de pago estático listo

--- a/src/front/styles/compra.css
+++ b/src/front/styles/compra.css
@@ -15,6 +15,7 @@
     .cajaProducto {
         width: 400px;
         border-radius: 10px;
+
     }
 
     .imgProducto {
@@ -252,7 +253,7 @@
 
 /* separación */
 
-/* PANTALLA CELULAR CARRO VACIO */
+/* RESPONSIVE CARRO VACIO */
 @media only screen and (min-width: 520px) {
     .cajaProductoVacio {
         margin-top: 30px;
@@ -279,4 +280,45 @@
     .fondoCarroVacio {
         height: 100%;
     }
+}
+
+/* CSS PARA BOTON */
+
+.button {
+    padding: 15px 25px;
+    border: unset;
+    border-radius: 15px;
+    color: #212121;
+    z-index: 1;
+    background: #DB962E;
+    position: relative;
+    font-weight: 1000;
+    font-size: 17px;
+    /* -webkit-box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27);
+    box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27); */
+    transition: all 250ms;
+    overflow: hidden;
+}
+
+.button::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 0;
+    border-radius: 15px;
+    background-color: #be8226;
+    z-index: -1;
+    /* -webkit-box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27);
+    box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27); */
+    transition: all 250ms
+}
+
+.button:hover {
+    color: #e8e8e8;
+}
+
+.button:hover::before {
+    width: 100%;
 }
