--- a/src/front/styles/img.css
+++ b/src/front/styles/img.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
 body{
     background:white;
+    font-family: 'Montserrat', sans-serif;
+    
 }
 img{
     width: 500px;
     height: 500px;
     object-fit: contain;
-}   
+} 
