--- a/src/front/styles/login.css
+++ b/src/front/styles/login.css
@@ -25,7 +25,8 @@ No Descomentar, podrian haber conflicto con  otras clases con el mismo nombre, s
   background-repeat: no-repeat;
   background-size: cover;
   opacity: 0.9;
-/* padding: 50px 0 50px 0;*/
+  height: 1000px;
+  padding: 15% 0 50px 0;
 }
 
 a {
@@ -77,13 +78,11 @@ a:hover {
 }
 
 .login-group {
-  border-radius: 50px;
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6),
     inset 2px 2px 4px rgba(255, 255, 255, 0.5);
   border: none;
   outline: none;
-  background-color: rgba(0, 0, 0, 0.06);
-  background: #ffffff09;
+  background-color: rgba(255, 255, 255, 0.08);
   color: #efc804de;
   border-radius: 8px;
   padding: 10px 20px;
