--- a/src/front/styles/estilos.css
+++ b/src/front/styles/estilos.css
@@ -4,10 +4,7 @@
     box-sizing: border-box;
 }
 
-body {
-    padding: 50px 0 50px 0;
-    height: 100%;
-}
+
 /* .Form{
     background-color: rgba(255, 255, 255, 0.33);
 } */
@@ -16,7 +13,8 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     opacity: 0.9;
-
+    height: 1000px;
+    padding: 8% 0 50px 0;
 }
 
 main {
