--- a/src/front/styles/login.css
+++ b/src/front/styles/login.css
@@ -106,7 +106,7 @@ a:hover {
   top: 50%;
   background: #413f3f64;
   color: #efc804de;
-  padding: 11px 0;
+  padding: 0 20px 0 0;
   width: 50px;
   height: 50px;
   margin-top: -25px;
