--- a/src/front/styles/img.css
+++ b/src/front/styles/img.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
 body{
 
     font-family: 'Montserrat', sans-serif;
