api terceros forms

--- a/src/front/styles/img.css
+++ b/src/front/styles/img.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 body{
+   /*  background-color: rgba(252, 253, 253, 0.548); */
 
     font-family: 'Montserrat', sans-serif;
     
