modificacion al panel de control, agregué un to do list funcional

--- a/src/front/styles/admin.css
+++ b/src/front/styles/admin.css
@@ -71,3 +71,44 @@
   max-width: 60px;
   max-height: 60px;
 }
+
+/* To Do List */
+.title {
+  text-align: center;
+  color: aliceblue;
+  height: 30px;
+  padding:5px;
+}
+
+.field {
+  display:flex;
+  justify-content: center;
+  padding: 10px;
+  
+}
+.fieldButton {
+  color: #db962e;
+  background-color: #212225;
+  border-width: 1PX ;
+  border-color: #dcac00;
+  border-radius: 10px;
+  margin-left: 10px;
+  
+  
+}
+.fieldButton:hover {
+  color:#212225;
+  background-color:#db962e;
+  
+} 
+.taskBox {
+  display:flex;
+  justify-content: center;
+  margin: 8px;
+}
+.square {
+  border:1px solid white;
+  color: aliceblue;
+  background-color: #212225;
+}
+
