--- a/src/front/styles/admin.css
+++ b/src/front/styles/admin.css
@@ -1,3 +1,28 @@
+.body_admin {
+  background-size: contain;
+  background-image: url("https://www.ginoguitars.com/libimg2/products/2160x1440/0/90/Paul-Reed-Smith-Custom-24-Artist-Grade-341-OBS_03.jpg");
+  background-repeat:no-repeat;
+  background-size:cover;
+  opacity: 0.9;
+ /*  height: 900px; */
+}
+.body_form {
+  background-size: contain;
+  background-image: url("https://guitargeargiveaway.co.uk/wp-content/uploads/2022/03/Fender-Limited-Edition-Player-Stratocaster-HSS-in-Ferrari-Yellow-with-Ebony-Fingerboard-1.jpg");
+  background-repeat:no-repeat;
+  background-size:cover;
+  opacity: 0.9;
+ /*  height: 900px; */
+}
+.body_list {
+  background-size: contain;
+  background-image: url("https://pixy.org/src/6/61509.png");
+  background-repeat:no-repeat;
+  background-size:cover;
+  opacity: 0.9;
+ /*  height: 900px; */
+}
+
 #FileUpload {
   display: flex;
   justify-content: center;
